# cocos

./: .gitignore  .vimspector.json  Cargo.toml  README.md  lldb-vscode.json  test.txt
.github/workflows/: build-release.yml
cocos_py2/: __main__.py
cocos_py2/api/: coachbot.py
cocos_py2/cocos/: __init__.py
cosos-py/api/: legacy.py  modern.py
cosos_py2/api/: __init__.py  coachbot.py
cosos_py2/cocos/: __init__.py
src/: config.rs  lib.rs  main.rs
src/apipy/: mod.rs
src/controllers/: api.rs  interface.rs  master.rs  mod.rs  motor.rs  peripheral.rs  position.rs
src/controllers/api/: errors.rs  ipc_requests.rs  ipc_responses.rs  messager.rs  mod.rs
src/drivers/: led_driver.rs  mod.rs  motor_driver.rs  nucifera_driver.rs
src/iio/: mod.rs  pwm.rs
src/io/: gpio.rs  mod.rs
src/io/interface/: gpio.rs  mod.rs  net.rs  pwm.rs  uart.rs
src/io/rpi/: gpio.rs  mod.rs  pwm.rs  uart.rs
src/io/sim/: gpio.rs
src/io/sim_print/: gpio.rs  mod.rs  pwm.rs  uart.rs
src/models/: api.rs  app_state.rs  led_color.rs  mod.rs  motor_power.rs  position.rs
