[package]
name = "cocos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.1"
uom = "0.33.0"
futures-signals = "0.3.31"
futures = "0.3.24"
async-std = "1.12.0"
lazy_static = "1.4.0"
log = "0.4.17"
